login and signuo screens

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,9 +1,10 @@
-.Button__Container{
-    background-color: white;
-    width: fit-content;
-    padding: 10px 30px;
-    border-radius: 10px;
+.Button__Container {
+  background-color: white;
+  width: fit-content;
+  padding: 10px 30px;
+  border-radius: 10px;
+  text-align: center;
 
-    color: black;
-    cursor: pointer;
+  color: black;
+  cursor: pointer;
 }
