--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -1,28 +1,45 @@
-
-.Input__Container{
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    margin: 20px 0px;
-
+.Input__Container {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  margin: 20px 0px;
 }
 
-
-.Input__Title{
-    margin: 10px 2px;
-    font-size: 21px;
+.Input__Title {
+  margin: 10px 2px;
+  font-size: 21px;
 }
 
-.Input__Input{
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    outline: none;
-    font-size: 1.2rem;
-    transition: 0.2s;
-    color: white;
+.Input__Input {
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  outline: none;
+  font-size: 1.2rem;
+  transition: 0.2s;
+  color: white;
 
-    &:focus{
-        border: 1px solid rgba(0, 0, 0, 0.5);
-    }
+  &:focus {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+  }
+}
+
+.Input__Error {
+  color: red;
+  font-size: 1.2rem;
+  margin: 5px 0px;
+}
+
+.Input__ErrorContainer {
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 1px solid rgb(251, 0, 0);
+  outline: none;
+  font-size: 1.2rem;
+  transition: 0.2s;
+  color: white;
+
+  &:focus {
+    border: 1px solid rgba(249, 4, 4, 0.998);
+  }
 }
