--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,3 +4,9 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.Login__TextError {
+  color: red;
+  font-size: 1.2rem;
+  margin: 5px 0px;
+}
