--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -18,6 +18,7 @@
   font-size: 1.2rem;
   transition: 0.2s;
   color: white;
+  background-color: rgba(1, 104, 173, 0.8);
 
   &:focus {
     border: 1px solid rgba(0, 0, 0, 0.5);
