--- a/src/pages/ViewCourse.scss
+++ b/src/pages/ViewCourse.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 10px;
     border-radius: 5px;
-    background-color: #000000aa;
+    background-color: rgba(1, 104, 173, 0.8);
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
     cursor: pointer;
     transition: all 0.2s ease-in-out;
