--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.9);
-  background-color: #00aae4;
+  background-color: #009dd1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
