Agrego texto de recuperacion de contrasena en pantalla de login

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -10,3 +10,9 @@
   font-size: 1.2rem;
   margin: 5px 0px;
 }
+
+.Recovery__Text{
+  padding: 0px 15px 0px 15px;
+  margin: 15px;
+  font-weight: bold;
+}
