--- a/src/components/CourseView/CourseView.scss
+++ b/src/components/CourseView/CourseView.scss
@@ -1,21 +1,54 @@
-.CourseView__Container{
-    border-radius: 10px;
-    background-color: white;
-    text-align: center;
-    padding: 10px;
-    color: black;
-    min-width: 100px;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
+.CourseView__Container {
+  border-radius: 10px;
+  background-color: white;
+  text-align: center;
+  padding: 10px;
+  color: black;
+  min-width: 100px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.CourseView__BackgroundImage{
-    width: 150px;
-    height: auto;
-    position: absolute;
-    left: 0px;
-    top: -20px;
-    rotate: 30deg;
-    opacity: 0.1;
+.CourseView__BackgroundImage {
+  width: 150px;
+  height: auto;
+  position: absolute;
+  left: 0px;
+  top: -20px;
+  rotate: 30deg;
+  opacity: 0.1;
+}
+
+.octagon {
+  width: 100px;
+  height: 100px;
+  background: red;
+  position: relative;
+}
+.octagon:before {
+  content: "";
+  width: 100px;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-bottom: 29px solid red;
+  border-left: 29px solid #eee;
+  border-right: 29px solid #eee;
+}
+.octagon:after {
+  content: "";
+  width: 100px;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-top: 29px solid red;
+  border-left: 29px solid #eee;
+  border-right: 29px solid #eee;
 }
